[gd_scene load_steps=4 format=3 uid="uid://bdpinvwfslvsf"]

[ext_resource type="Script" path="res://scripts/Hover.gd" id="1_diewm"]
[ext_resource type="Texture2D" uid="uid://q66b24ifkkf5" path="res://resources/green.png" id="2_6aj12"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g7xw"]
size = Vector2(16, 16)

[node name="Area2D" type="Area2D"]
position = Vector2(0, -32)
script = ExtResource("1_diewm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 40)
shape = SubResource("RectangleShape2D_5g7xw")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(8, 40)
scale = Vector2(2, 2)
texture = ExtResource("2_6aj12")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
